# cuddly-octo-telegram

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  test_notion.py
.windsurf/rules/: agent-development-rules.md
.windsurf/workflows/: scaffold-feature.md
config/: runconfig.yaml
docs/: adk-docs.md  firecrawl_mcp.md  firecrawl_search.md
docs/features/: notion_integration.md
docs/templates/: feature-template.md
src/: app.py
src/agents/: executor.py  greeter.py
src/orchestration/: __init__.py  coordinator.py
src/tools/: demo_tools.py  local_mcp_server.py  mcp.py
tests/: conftest.py  test_firecrawl_search.py  test_notion.py  test_notion_tools.py  test_topic_verifier_wiring.py  test_wiring.py
